Add linting setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,6 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = parserator_web.settings
+
+[flake8]
+exclude = parserator_web/static/ parserator_web/settings.py
+max-line-length = 90
