--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = parserator_web.settings
+DJANGO_SETTINGS_MODULE = tests.test_config
 
 [flake8]
 exclude = parserator_web/static/ parserator_web/settings.py
